--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "@babel/core": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
-    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "jquery": "^3.4.1",
     "pug": "^2.0.4",
     "require": "^2.4.20",
     "webpack-dev-server": "^3.8.2"
@@ -24,7 +21,10 @@
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "css-loader": "^3.2.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
@@ -32,6 +32,9 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "peerDependencies": {
+    "jquery": "^3.4.1"
   },
   "scripts": {
     "build": "webpack -w"
